@@ -2,6 +2,6 @@ AUX wiiuse-0.12-makefile.patch 1446 RMD160 6fb1ce2a01328685a31b3d77b39a566e93980
 AUX wiiuse-0.6-gfx.c.patch 265 RMD160 25a2eaac6de9233bb8d935e58fdca1e70ae1007a SHA1 8316fabc7d682cc38395404dd57a81bdb814997f SHA256 072f8150bc0ef1517ccc546d730a64bd64918a88d5a2e8d17602d72ec7f2f983
 DIST wiiuse_v0.12_src.tar.gz 108263 RMD160 aeb30495da8fd9f3e744a48f2e71fb2c7505991c SHA1 141e3c60807e931898e32903138830f71e3c683b SHA256 afc86b05ab201842c7f258e3d854171ede80167bd257272ae59d0cfbd342fb0d
 DIST wiiuse_v0.9_src.tar.gz 110702 RMD160 a4bcaaac7e9808b8083b8e88467447f8923b378b SHA1 005bb5710a463dc10d17a45fe3f3419135746198 SHA256 c75d1e4c16a66f8f268b4cdd3b4308bdf9f8449a0d83db43ceae36c6622a7326
-EBUILD wiiuse-0.12.ebuild 1476 RMD160 7a8619105c4b1338ad726724b343af0acd5f2a2a SHA1 e6cd1e07014b580bb9370ec2e677554429fb9c19 SHA256 cb5a5edcd15e5b3ee7e89676a2ac8ce0ab6abb51163e828363470097cd0af3cf
-EBUILD wiiuse-0.9.ebuild 1175 RMD160 2dd5c51aeeb47b64310c9c1b71aabb999922b485 SHA1 fcb912bf89d8e4f4de5ff00d6696dde6108ca7d1 SHA256 efa28b2e0412d080db1ec9e3c6f71674062eab180a72d3b090dfb0611007093d
-MISC ChangeLog 931 RMD160 fbde77601070057209b118b3fb560bcbe8931534 SHA1 073922ecbf5102114a24ddcad12f0664a8fe198b SHA256 33734c470b99b4b3a0ea54e43a41c187ec474b4e3c222a04fc0e2b79bf731fd3
+EBUILD wiiuse-0.12.ebuild 1466 RMD160 f4f88ffd93f04a4e9b0c62da629c9e70064c1eab SHA1 88ac130c9513b822d7003e319b3d2fcfd4f141bf SHA256 60d1d1958a595ec9f0bb838c9269904f40ce94f0d32a6d2e617287a966948973
+EBUILD wiiuse-0.9.ebuild 1177 RMD160 22f32c04d1f440a6a7b52340a85ec10fa9cfd6ba SHA1 a0b3d4316e3675d9c1a60ff54ba0271a3f3d9a25 SHA256 551aafeae7c528e485e9a6b75dead5630e5edf39d89749dfee1d29abcbf2c2d7
+MISC ChangeLog 1059 RMD160 0ab39c15bf1cacde36b0720a2ce6846bb2046d9d SHA1 db8db6ffed352d2aab090a3fee26c3009918fd0a SHA256 0b2b8183026ed19fabaf4b14a09f1dbac49c298068a17029cfa2a8097f0ae81a
